Removed dependency on ProtocolLib, added silent mode to chat filters, improved loading times. Updated chat event handlers to use modern systems. Updated to 1.21.4. Abstracted chat actions, made URL and Unicode blockers standard chat filters, integrating profanity and slur regex into their respective filters. Made sentinel command not spam console when you make a mistake.